# pelican_nlp

./: .gitignore  0_1_output_20241204_141500896830.json  Document.py  MANIFEST.in  PELICAN.py  README.md  README.rst  Subject.py  TODO.txt  config.py  config.yml  csv_functions.py  document.py  main.py  output.json  output_20241128_125821590124.json  output_20241128_134600685284.json  output_20241129_152700681660.json  output_20241203_123038088684.json  output_20241203_125104547396.json  output_20241204_094728123002.json  output_20241204_100953424951.json  output_20241204_101922113334.json  output_20241204_103933621794.json  output_20241204_104738857215.json  output_20241204_122120876805.json  output_20241204_123708256750.json  output_20241204_123912082926.json  output_20241204_124133588510.json  output_20241204_124512176170.json  output_20241204_130430231663.json  output_20241204_130520686361.json  output_20241204_131016708783.json  output_20241204_131327661240.json  output_20241204_132857419079.json  output_20241204_134736604094.json  output_20241204_140234269316.json  parameters.py  pyproject.toml  requirements.txt  (+5 more)
docs/: transcription_guide.md
examples/PyPI_testing_discourse/: config_discourse.yml
examples/PyPI_testing_fluency/: config_fluency.yml
examples/PyPI_testing_image-descriptions/: config_image-descriptions.yml
examples/example_acoustic-features/: config_acousticfeatures.yml
examples/example_discourse/: config_discourse.yml
examples/example_fluency/: config_fluency.yml
examples/example_general/: config_general.yml
examples/example_image-descriptions/: config_image-descriptions.yml
examples/example_perplexity/: config_perplexity.yml
extraction/: LanguageModel.py  __init__.py  extract_acoustic_features.py  extract_embeddings.py  extract_logits.py  model.py
extraction/test_documents/: wallace_1.15_3.txt
pelican/: .gitignore  LPDS.py  README.md  TODO.txt  __init__.py  audio_document.py  config.yml  config_discourse.yml  config_fluency.yml  config_morteza.yml  csv_functions.py  document.py  main.py  setup_functions.py
pelican/Configuration_files/: config_audio.yml  config_fluency.yml  config_general.yml
pelican/Praat_setup/: prosogram.praat
pelican/configuration_files/: config_audio.yml  config_discourse.yml  config_fluency.yml  config_morteza.yml
pelican/core/: audio_document.py  corpus.py  document.py  subject.py
pelican/extraction/: LanguageModel.py  __init__.py  acoustic_feature_extraction.py  distance_from_optimality.py  extract_acoustic_features.py  extract_embeddings.py  extract_logits.py  language_model.py  semantic_similarity.py
pelican/metrics_statistics/: embeddings_metrics_statistics.py
pelican/preprocessing/: LPDS.py  corpus.py  fluency_cleaner.py  pipeline.py  speaker_diarization.py  speaker_diarization_Nils.py  subject.py  text_cleaner.py  text_importer.py  text_tokenizer.py
pelican/simulation/: generate_parameter.py  generate_text.py  setup_pipeline.py  simu_config.py  simu_main.py
pelican/tests/: test_subject.py
pelican/transcription/: .gitignore  LICENSE  MANIFEST.in  README.md  __main__.py  alignment.py  annotation_tool_boundaries.py  requirements.txt  run_transcription.py  setup.py  transcribe_audio.py  transcription.py  utils.py  word_boundaries.py
pelican/utils/: csv_functions.py
pelican_nlp/: __init__.py  _version.py  cli.py  config.py  job.praat  main.py  test_praat_step1.py
pelican_nlp-0.3.17/: PKG-INFO  README.rst  pyproject.toml  requirements.txt
pelican_nlp-0.3.17/pelican_nlp/: cli.py  config.py  main.py
pelican_nlp-0.3.7/: LICENSE  PKG-INFO  pyproject.toml
pelican_nlp-0.3.7/pelican_nlp/: main.py
pelican_nlp-0.3.7/tests/: __init__.py
pelican_nlp-0.3.9/: PKG-INFO  README.rst  pyproject.toml
pelican_nlp-0.3.9/pelican_nlp/: cli.py
pelican_nlp/configuration_files/: config_discourse.yml  config_general.yml  config_morteza.yml
pelican_nlp/core/: __init__.py  audio_document.py  corpus.py  document.py  subject.py
pelican_nlp/extraction/: acoustic_feature_extraction.py  distance_from_randomness.py  extract_embeddings.py  extract_logits.py  extract_perplexity.py  extract_topic_modeling.py  language_model.py  perplexity.py  semantic_similarity.py
pelican_nlp/praat/: polytonia.praat  prosomain.praat
pelican_nlp/preprocessing/: LPDS.py  __init__.py  pipeline.py  speaker_diarization.py  text_cleaner.py  text_importer.py  text_normalizer.py  text_tokenizer.py  transcription.py
pelican_nlp/sample_configuration_files/: config_discourse.yml  config_fluency.yml  config_general.yml  config_perplexity.yml  config_transcription.yml
pelican_nlp/tests/: test_document.py
pelican_nlp/utils/: __init__.py  csv_functions.py  filename_parser.py  setup_functions.py
pelicanlang.egg-info/: PKG-INFO  SOURCES.txt
preprocessing/: __init__.py  corpus.py  pipeline.py  subject.py  text_cleaner.py  text_importer.py  text_normalizer.py  text_processing.py  text_tokenizer.py
simu/: __init__.py  generate_options.py  generate_parameter.py  generate_text.py  pipeline_setup.py  setup_pipeline.py  simu_main.py  subject_config.py
simu_output/: subject_0.json  subject_1.json  subject_2.json  subject_3.json  subject_4.json  subject_5.json  subject_6.json  subject_7.json  subject_8.json  subject_9.json
simu_output/group_a/: subject_0.json  subject_1.json  subject_2.json  subject_3.json  subject_4.json  subject_5.json  subject_6.json  subject_7.json  subject_8.json  subject_9.json
simu_output/group_b/: subject_0.json  subject_1.json  subject_2.json  subject_3.json  subject_4.json  subject_5.json  subject_6.json  subject_7.json  subject_8.json  (+1 more)
tests/: test_document.py
transcription/: annotation_tool.py  annotation_tool_boundaries.py  annotation_tool_sandbox.py  transcribe_audio_chunked.py  transcription.py  transcription_gui.py
~/: .pypirc
(+933 files in other folders)
