[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pelican-nlp"
version = "0.1.1"
description = "Preprocessing and Extraction of Linguistic Information for Computational Analysis"
authors = [
    {name = "Yves Pauli", email = "yves.pauli@gmail.com"},
]
license = {text = "Attribution-NonCommercial 4.0 International"}
readme = "README.rst"
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "numpy>=1.23.0,<2.0.0",
    "pandas>=1.5.0,<2.0.0",
    "PyYAML>=6.0.2",
    "torch>=2.5.1",
    "spacy>=3.7.2,<3.9.0",
    "transformers>=4.37.2,<4.42.0",
    "docx2txt>=0.8",
    "striprtf>=0.0.28",
    "chardet>=4.0.0",
    "scikit_learn>=1.6.1",
    "scipy>=1.15.2",
    "fasttext>=0.9.3",
    "matplotlib>=3.10.1",
    "seaborn>=0.13.2",
    "accelerate>=1.1.1",
    "editdistance>=0.8.1",
    "psutil>=6.1.0",
    "tqdm>=4.66.5",
    "pytest>=8.3.4",
    "statsmodels>=0.14.4"
]

[project.urls]
Homepage = "https://github.com/ypauli/PELICAN-nlp"
Repository = "https://github.com/ypauli/PELICAN-nlp"

[tool.setuptools]
packages = ["pelican_nlp"] 